--- a/src/app/components/book-tickets/book-tickets.component.html
+++ b/src/app/components/book-tickets/book-tickets.component.html
@@ -1,6 +1,6 @@
 <div class="row justify-content-center mt-3">
     <div class="col-12 col-md-4 mt-3">
-        <div class="card"> 
+        <div class="card shadow"> 
             <div class="container text-center">
                 <img src="/assets/book.png" style="width: 100px; " alt="loginImage" 
                 class="img-fluid mt-3">
@@ -12,26 +12,26 @@
                           <div class="col">
                             <div class="form-group mb-3">
                                 <label for="movieName" class="form-label">Movie Name:</label>
-                                <input type="text" class="form-control" [(ngModel)]="movieName" 
+                                <input required type="text" class="form-control" [(ngModel)]="movieName" 
                                     name="movieName" id="movieName">
                             </div>
                           </div>
                         <div class="col">
                             <div class="form-group mb-3">
                                 <label for="theatherName" class="form-label">Theather Name:</label>
-                                <input type="text" class="form-control" [(ngModel)]="theatherName" 
+                                <input required type="text" class="form-control" [(ngModel)]="theatherName" 
                                     name="theatherName" id="theatherName">
                             </div>
                         </div>
                       </div>
                     <div class="form-group mb-3">
                         <label for="noOfTickets" class="form-label">Number of Tickets:</label>
-                        <input type="number" class="form-control" [(ngModel)]="noOfTickets" 
+                        <input required type="number" class="form-control" [(ngModel)]="noOfTickets" 
                             name="noOfTickets" id="noOfTickets" placeholder="1">
                     </div>
                     <div class="form-group mb-3">
                         <label for="seats" class="form-label">Seats:</label>
-                        <input type="text" class="form-control" [(ngModel)]="seats" 
+                        <input required type="text" class="form-control" [(ngModel)]="seats" 
                             name="seats" id="seats" placeholder="A1,A2,A3">
                     </div>
                     <div class="text-center">
