--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="row justify-content-center mt-3">
     <div class="col-12 col-md-4 mt-3">
-        <div class="card">
+        <div class="card shadow">
             <div class="container text-center">
                 <img src="/assets/password.png" style="width: 100px;" alt="loginImage" 
                 class="img-fluid mt-3">
