--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,8 +1,8 @@
 <div class="row justify-content-center mt-3">
     <div class="col-12 col-md-4 mt-3">
-        <div class="card"> 
+        <div class="card shadow"> 
             <div class="container text-center">
-                <img src="/assets/profile.png" style="width: 100px;" alt="loginImage" 
+                <img src="/assets/profile.png" style="width: 100px; border: 1px solid grey; padding: 1px;" alt="loginImage" 
                 class="img-fluid mt-3">
             </div> 
             <h2 class="text-center mt-2">Register</h2>
